[package]
name = "tkwork"
version = "0.1.0"
edition = "2021"
authors = ["Mbithi <mbithi@zillahtechnologies.co.ke>"]

[dependencies]
colored = "2.1.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
